...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="9dR-64-qoC" userLabel="WebViewViewController" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="YQh-zn-oWb">
                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" customUserAgent="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="cn5-aZ-btt" userLabel="webView">
                                <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration" applicationNameForUserAgent="UnsplashWebView">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
                                    <constraint firstAttribute="height" constant="75" id="7lt-Op-iNc"/>
                                    <constraint firstAttribute="width" constant="83" id="raH-eb-ZFe"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dSq-UW-d9h">
                                <rect key="frame" x="8" y="55" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="ZSX-xJ-BXN"/>
                                    <constraint firstAttribute="height" constant="24" id="dxc-Ni-Ami"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                    <constraint firstAttribute="width" secondItem="n5A-Jm-efP" secondAttribute="height" multiplier="1:1.5" constant="1" id="uvl-aN-FqE"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b5h-uU-9n4">
                                <rect key="frame" x="16" y="760" width="398" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Odx-0u-irF"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <color key="baseForegroundColor" name="YP Black"/>
...
