...
    }()
    
    lazy var likeButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(likeButtonClicked), for: .touchUpInside)
        button.accessibilityIdentifier = "LikeButton"
        return button
    }()
    
    // MARK: - Methods
    
    override func layoutSubviews() {
...
